samples/operate-first/admissionregistration.k8s.io/validatingwebhookconfigurations/fybrik-system-validating-webhook/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: fybrik-system/serving-cert
    certmanager.k8s.io/inject-ca-from: fybrik-system/serving-cert
  creationTimestamp: null
  name: fybrik-system-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: fybrik-system
      path: /validate-app-fybrik-io-v1alpha1-fybrikapplication
  failurePolicy: Fail
  name: vfybrikapplication.kb.io
  rules:
  - apiGroups:
    - app.fybrik.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - fybrikapplications
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: fybrik-system
      path: /validate-motion-fybrik-io-v1alpha1-batchtransfer
  failurePolicy: Fail
  name: vbatchtransfer.kb.io
  rules:
  - apiGroups:
    - motion.fybrik.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - batchtransfers
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: fybrik-system
      path: /validate-motion-fybrik-io-v1alpha1-streamtransfer
  failurePolicy: Fail
  name: vstreamtransfer.kb.io
  rules:
  - apiGroups:
    - motion.fybrik.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - streamtransfers
  sideEffects: None
